crates/testing/compiletest-integration/tests/ui/type-mismatch-function-arg.stderr
error: type mismatch in function argument: expected i64, found String
 --> tests/ui/type-mismatch-function-arg.rs:6:15
  |
6 |     takes_int("hello")
  |               ^^^^^^^ expected i64, found String
